--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
+*.settings
+*.project
+*.classpath
+*.factorypath
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
